--- a/index.html
+++ b/index.html
@@ -12,16 +12,17 @@
 
 <body>
     <div id="content">
-    <h1>Crystals Collector</h1><br>
-    <div id="instructions">
-        <ul>You will be given a random number at the start of the game.</ul>
-        <ul>There are four crystals Below. By clicking on a crystal, you will add a specific amount of points to your
-            total score.</ul>
-        <ul>You win the game by matching your total score to the random number as shown below. You lose this game if
-            your total score is above the random number.</ul>
-        <ul>The value of each crystal is hidden from you until you click on it.</ul>
-        <ul>Each time the game starts the values of each crystal will change.</ul>
-    </div><br>
+        <h1>Crystals Collector</h1><br>
+        <div id="instructions">
+            <ul>You will be given a random number at the start of the game.</ul>
+            <ul>There are four crystals Below. By clicking on a crystal, you will add a specific amount of points to
+                your
+                total score.</ul>
+            <ul>You win the game by matching your total score to the random number as shown below. You lose this game if
+                your total score is above the random number.</ul>
+            <ul>The value of each crystal is hidden from you until you click on it.</ul>
+            <ul>Each time the game starts the values of each crystal will change.</ul>
+        </div><br>
         <div class="row">
             <div class="column">
                 <h1 id="ranNumb"></h1>
@@ -34,7 +35,7 @@
 
                 </div>
             </div>
-            
+
         </div>
         <div id="gems">
             <input type="image" id="gem1" src="assets/images/gem1.jpg" />
@@ -46,12 +47,12 @@
             <p>Total score:</p>
             <div id="score"></div>
         </div>
-        </div>
+    </div>
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-        <script src="assets/javascript/game.js"></script>
-        <audio autoplay="true" src="assets/sounds/Better Days.mp3">
-            <audio id="audio" src="assets/sounds/clicker.wav">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+    <script src="assets/javascript/game.js"></script>
+    <audio autoplay="true" src="assets/sounds/Better Days.mp3">
+        <audio id="audio" src="assets/sounds/clicker.wav">
 
 </body>
 
